# conan-decoupled-workspace

./: .gitignore  LICENSE  README.md  dependencies.graphml
chat/: CMakeLists.txt
chat/src/: CMakeLists.txt
hello/: CMakeLists.txt  Findhello.cmake  conanfile.py
hello/src/: CMakeLists.txt
say/: CMakeLists.txt  Findsay.cmake  conanfile.py
say/src/: CMakeLists.txt
